# rofi-file-browser-extended

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile.am  PKGBUILD  README.md  configure.ac
doc/: rofi-file-browser-extended.1  rofi-file-browser-extended.1.html  rofi-file-browser-extended.1.ronn  rofi-file-browser.1  rofi-file-browser.1.html  rofi-file-browser.1.ronn
include/: cmds.h  config.h  defaults.h  files.h  icons.h  keys.h  options.h  types.h  util.h
include/compat/: extended_nftw.h
rofi-dict/: Makefile.am  PKGBUILD  configure.ac  convert_dict
rofi-dict/src/: dict.c
rofi-file_browser-extended/: CMakeLists.txt  Makefile.am  PKGBUILD  configure.ac
rofi-file_browser-extended/src/: filebrowser.c
rofi-prompt/: Makefile.am  PKGBUILD  configure.ac
rofi-prompt/src/: prompt.c
src/: cmds.c  filebrowser.c  filebrowser.h  files.c  icons.c  keys.c  options.c  types.h  util.c  util.h
src/compat/: extended_nftw.c
src/posix-compat/: extended_nftw.c  extended_nftw.h
